# path_to_care

./: .gitignore  CLAUDE.md  Makefile  PROGRESS.md  README.md  SUBMISSION.md  pyproject.toml  test-results.json
.claude/: CLAUDE.md
.tmp_space/: README.md  app.py  requirements.txt
adversary/: check_distribution.py  generate.py  generate_extra20.py  generate_hard.py  generate_train_v2.py
core/: llm.py
data/: cases.jsonl  cases_80.jsonl  cases_extra20.jsonl  cases_hard.jsonl  cases_train_v2.jsonl  holdout.jsonl  train.jsonl
docs/: ARCHITECTURE.md  ASSETS.md  BIP_POST.md  COMPATIBILITY.md  DEMO.md  DESCRIPTION.md  EVALUATION.md  FINE_TUNING_DEMO.md  MODAL_SERVE.md  PITCH.md  PLAN.md  PRESENTATION.md  PRESENTATION_bright.md  PROJECT.md  RESULTS.md  SCIN_DIFF_DX.md  SUBMISSION_REPORT.md  TRACK_MAPPING.md  VLLM_SERVE.md
evidence/: cardinal_rule_cross_lang.txt  delta_report.txt  env_pip_freeze.txt  env_torch_check.txt  gemma4_smoke.txt  git_remote.txt  gradio_smoke.txt  hf_space_final.txt  mcp_smoke.txt  medgemma_vs_gemma4_baseline.txt  orchestrator_smoke.txt  pytest.txt  qwen_smoke.txt  readme_check.txt  repo_tree.txt  reward_unit_tests.txt  scin_curation.txt  scin_delta_report.txt  scin_fitzpatrick_report.txt  scin_images_count.txt  scin_lora_script_smoke.txt  scin_loss_curve.txt  scin_split.txt  scin_top10.txt  scin_trl_built.txt  stratified_report.txt  test_set_distribution.txt  vllm_backend_smoke.txt
frontend/: README.md  app.py  requirements.txt
frontend-next/: .dockerignore  Dockerfile  HF_README.md  package-lock.json  package.json  vitest.config.ts
harness/: metrics.py  reward.py  run.py  test_reward.py
logs/: scin_lora_train.jsonl
orchestrator/: agent.py
results/: baseline_metrics.json  scin_baseline.json  scin_dx34_baseline.json  scin_dx34_baseline_inproc.json  scin_dx34_topk_baseline.json  scin_dx34_topk_medgemma.json  scin_dx34_topk_tuned.json  scin_dx34_tuned.json  scin_dx34_tuned_inproc.json  scin_top16_baseline_gemma4.json  scin_top16_topk_baseline.json  scin_top16_topk_tuned.json  stratified.json  tuned_metrics.json
scripts/: build_delta_report.py  build_scin_prompts.py  build_scin_trl.py  build_scin_trl_topk.py  compare_per_case.py  curate_scin.py  curate_scin_dx.py  demo.sh  deploy_hf_space.sh  download_scin_full.py  eval_medgemma_baseline.py  eval_scin.py  eval_scin_dx.py  (+21 more)
(+81 files in other folders)
